@@ -3714,6 +3714,19 @@ X509 *
 X509_STORE_CTX_get_current_cert(x509_store_ctx)
      X509_STORE_CTX * 	x509_store_ctx
 
+#if (OPENSSL_VERSION_NUMBER >= 0x10100005L && !defined(LIBRESSL_VERSION_NUMBER)) || (LIBRESSL_VERSION_NUMBER >= 0x2070000fL) /* OpenSSL 1.1.0-pre5, LibreSSL 2.7.0 */
+
+X509 *
+X509_STORE_CTX_get0_cert(x509_store_ctx)
+    X509_STORE_CTX *x509_store_ctx
+
+#endif
+
+STACK_OF(X509) *
+X509_STORE_CTX_get1_chain(x509_store_ctx)
+    X509_STORE_CTX *x509_store_ctx
+
+
 int
 X509_STORE_CTX_get_ex_new_index(argl,argp=NULL,new_func=NULL,dup_func=NULL,free_func=NULL)
      long argl
@@ -6063,6 +6076,39 @@ int
 sk_X509_push(stack, data)
     STACK_OF(X509) * stack
     X509 * data
+
+X509 *
+sk_X509_pop(stack)
+    STACK_OF(X509) * stack
+
+X509 *
+sk_X509_shift(stack)
+    STACK_OF(X509) * stack
+
+int
+sk_X509_unshift(stack,x509)
+    STACK_OF(X509) * stack
+    X509 * x509
+
+int
+sk_X509_insert(stack,x509,index)
+    STACK_OF(X509) * stack
+    X509 * x509
+    int index
+
+X509 *
+sk_X509_delete(stack,index)
+    STACK_OF(X509) * stack
+    int index
+
+X509 *
+sk_X509_value(stack,index)
+    STACK_OF(X509) * stack
+    int index
+
+int
+sk_X509_num(stack)
+    STACK_OF(X509) * stack
 
 X509 *
 P_X509_INFO_get_x509(info)
